error.txt
file:///C:/Users/HP/master/server.js:3
import limiter from './middleware/ratelimit.js'
       ^^^^^^^
SyntaxError: The requested module './middleware/ratelimit.js' does not provide an export named 'default'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.12.0
